<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fl"
    android:background="@color/pink"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        tools:context=".ManageFragment">


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/master_pass" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minLines="1"
                android:maxEms="5"
                android:minEms="1"
                android:textColor="@color/bg"
                android:textColorHint="@color/yellow700"
                android:inputType="textPassword"
                android:hint="@string/passwordh" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_repassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minLines="1"
                android:maxEms="5"
                android:minEms="1"
                android:textColor="@color/bg"
                android:textColorHint="@color/yellow700"
                android:inputType="textPassword"
                android:hint="@string/repasswordh" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fab"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:layout_margin="16dp"
        android:elevation="6dp"
        android:visibility="gone"
        android:src="@drawable/ic_save_white"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>